# imac1-workshop-cpp

./: README.md
elvin/: .gitignore  CMakeLists.txt  README.md  run_all.sh
elvin/src/: main.cpp  template.cpp
elvin/src/bruit/: main.cpp
elvin/src/cercle/: main.cpp
elvin/src/degrade/: main.cpp
elvin/src/disque/: main.cpp
elvin/src/disqueWeird/: main.cpp
elvin/src/fractale/: main.cpp
elvin/src/generateur-de-tri/: main.cpp
elvin/src/glitch/: main.cpp
elvin/src/invert/: main.cpp
elvin/src/kmeans/: main.cpp
elvin/src/kmeans-gpt/: main.cpp
elvin/src/luminosity/: main.cpp
elvin/src/miroir/: main.cpp
elvin/src/miroirDouble/: main.cpp
elvin/src/mosaique/: main.cpp
elvin/src/mosaiqueMiroir/: main.cpp
elvin/src/nETb/: main.cpp
elvin/src/normalisation/: main.cpp
elvin/src/normalisation-lum/: main.cpp
elvin/src/rosace/: main.cpp
elvin/src/rotate90/: main.cpp
elvin/src/rotateWeird/: main.cpp
elvin/src/split/: main.cpp
elvin/src/splitXcropped/: main.cpp
elvin/src/swap/: main.cpp
elvin/src/tri/: main.cpp
elvin/src/tri-brightness/: main.cpp
elvin/src/tri-brightness-all/: main.cpp
elvin/src/tri-brightness-vertical/: main.cpp
elvin/src/tri-double/: main.cpp
elvin/src/tri-hue/: main.cpp
elvin/src/tri-hue-all/: main.cpp
elvin/src/tri-random-brightness/: main.cpp
elvin/src/tri-random-hue/: main.cpp
elvin/src/vert/: main.cpp
elvin/src/virtualiser/: main.cpp
elvin/src/vortex/: main.cpp
elvin/src/vortex-fail-1/: main.cpp
elvin/src/vortex-fail-10/: main.cpp
elvin/src/vortex-fail-11/: main.cpp
elvin/src/vortex-fail-2/: main.cpp
elvin/src/vortex-fail-3/: main.cpp
elvin/src/vortex-fail-4/: main.cpp
elvin/src/vortex-fail-5/: main.cpp
elvin/src/vortex-fail-6/: main.cpp
elvin/src/vortex-fail-7/: main.cpp
elvin/src/vortex-fail-8/: main.cpp
elvin/src/vortex-fail-9/: main.cpp
elvin/src/white/: main.cpp
flavien/: README.md
flavien/results/: EXO10a_Luminosité_Assombrir.cpp  EXO10b_Luminostié_Eclaircir.cpp  EXO11_Disque.cpp  EXO12_Cercle.cpp  EXO13_Rosace.cpp  EXO14_Mosaïque.cpp  EXO15_Mosaïque_Miroir.cpp  EXO16_Glitch.cpp  EXO17_Fractale.cpp  EXO18VF_Tramage_Troisième.cpp  EXO18VF_Tramage_artisanal.cpp  EXO18a_Tramage_Premier_essaie.cpp  EXO18b_Tramage_Deuxième_essaie.cpp  EXO1_Ne_garder_que_le_vert.cpp  EXO2_Echanger_les_canaux.cpp  EXO3_Noir_&_Blanc.cpp  EXO4_Negatif.cpp  EXO5_Degrade.cpp  EXO6_Miroir.cpp  EXO7a_Image_bruitée tricolore.cpp  EXO7b_Image_bruitée.cpp  EXO8_Rotation_de_90°.cpp  EXO9_RGB_Split.cpp
flavien/src/: main.cpp
